Agregue mensaje cuando la base no se encuentre