@@ -1,5 +1,3 @@
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.JsonMappingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.annotation.PostConstruct;
 import jakarta.enterprise.context.RequestScoped;
@@ -11,10 +9,11 @@ import java.net.URI;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
-import java.util.ArrayList;
 import java.util.Arrays;
+import java.text.Normalizer;
 import java.util.List;
-import org.json.JSONObject;
+import java.util.ArrayList;
+import java.util.stream.Collectors;
 
 @Named
 @RequestScoped
@@ -25,22 +24,30 @@ public class ProductoController {
     private List<Producto> listaDeseos = new ArrayList<>();
     private String selectedProductId;
     private Producto selectedProduct;
-     private String message;
-     private String criterioBusqueda = "";
-     private List<Producto> productosFiltrados = new ArrayList<>();
-     APISController api = new APISController();
+    private String message;
+    private String criterioBusqueda = "";
+    private List<Producto> productosFiltrados = new ArrayList<>();
+    APISController api = new APISController();
+    private boolean apiConectada = true;
+    private boolean noResultados = false;
 
     @PostConstruct
     public void init() {
         consultarProductos();
     }
-    
-     public ProductoController() {
+
+    // Método para normalizar las cadenas y eliminar acentos
+    private String normalizeString(String input) {
+        String normalized = Normalizer.normalize(input, Normalizer.Form.NFD);
+        return normalized.replaceAll("[\\p{InCombiningDiacriticalMarks}]", ""); // Eliminar marcas diacríticas (acentos)
+    }
+
+    public ProductoController() {
         this.productos = new ArrayList<>();
         this.productosFiltrados = new ArrayList<>();
     }
-     
-     public void consultarProductos() {
+
+    public void consultarProductos() {
         try {
             List<Producto> productosAPI1 = obtenerProductosDesdeAPI(api.getAPI_URL_1());
             List<Producto> productosAPI2 = obtenerProductosDesdeAPI(api.getAPI_URL_2());
@@ -49,8 +56,6 @@ public class ProductoController {
             this.productos = new ArrayList<>();
             this.productos.addAll(productosAPI1);
             this.productos.addAll(productosAPI2);
-
-            // Clonar la lista para productosFiltrados
             this.productosFiltrados = new ArrayList<>(productos);
 
             System.out.println("Se han guardado " + this.productos.size() + " productos en total.");
@@ -58,10 +63,10 @@ public class ProductoController {
         } catch (Exception e) {
             e.printStackTrace();
             FacesContext.getCurrentInstance().addMessage(null,
-                    new FacesMessage(FacesMessage.SEVERITY_ERROR, "Error en la conexión con las APIs", null));
+                    new FacesMessage(FacesMessage.SEVERITY_ERROR, "Error con el servidor intente mas tarde", null));
         }
     }
-     
+
     private List<Producto> obtenerProductosDesdeAPI(String apiUrl) {
         List<Producto> productos = new ArrayList<>();
         try {
@@ -79,31 +84,31 @@ public class ProductoController {
                 Producto[] productosArray = objectMapper.readValue(response.body(), Producto[].class);
                 productos = Arrays.asList(productosArray);
             } else {
-                FacesContext.getCurrentInstance().addMessage(null,
-                    new FacesMessage(FacesMessage.SEVERITY_ERROR, 
-                    "No se pudo obtener la lista de productos. Intente más tarde.", null));
+                // Marca un estado de error, sin mostrar detalles del JSON
+                this.apiConectada = false;
             }
-
         } catch (IOException | InterruptedException e) {
-            FacesContext.getCurrentInstance().addMessage(null,
-                new FacesMessage(FacesMessage.SEVERITY_ERROR, 
-                "Error al conectar con el servidor. Por favor, inténtelo más tarde.", null));
+            e.printStackTrace();
+            this.apiConectada = false;
         }
         return productos;
     }
 
-        public List<Producto> getProductos() {
-            return productosFiltrados.isEmpty() ? productos : productosFiltrados;
-        }
+    public boolean isApiConectada() {
+        return apiConectada;
+    }
 
+    public List<Producto> getProductos() {
+        return productosFiltrados.isEmpty() ? productos : productosFiltrados;
+    }
 
-        public Producto getProductoSeleccionado() {
-            return productoSeleccionado;
-        }
+    public Producto getProductoSeleccionado() {
+        return productoSeleccionado;
+    }
 
-        public void setProductoSeleccionado(Producto productoSeleccionado) {
-            this.productoSeleccionado = productoSeleccionado;
-        }
+    public void setProductoSeleccionado(Producto productoSeleccionado) {
+        this.productoSeleccionado = productoSeleccionado;
+    }
 
     public void eliminarDeListaDeseos(Producto producto) {
         if (producto != null && listaDeseos.contains(producto)) {
@@ -115,107 +120,44 @@ public class ProductoController {
                     new FacesMessage(FacesMessage.SEVERITY_WARN, "El producto no está en la lista de deseos", null));
         }
     }
-/*
-     public void consultarProductos() {
-        try {
-            HttpClient client = HttpClient.newHttpClient();
-            HttpRequest request = HttpRequest.newBuilder()
-                    .uri(URI.create("https://c4fe-2806-104e-d-3bcb-e57f-593d-a988-71d7.ngrok-free.app/proveedores/api/products"))
-                    .header("Accept", "application/json")
-                    .GET()
-                    .build();
 
-            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
-
-            System.out.println("*********");
-            System.out.println("Respuesta JSON: " + response.body());
-
-            if (response.statusCode() == 200) {
-                ObjectMapper objectMapper = new ObjectMapper();
-                
-                Producto[] productosArray = objectMapper.readValue(response.body(), Producto[].class);
-                
-                System.out.println("Productos convertidos:");
-                for (Producto p : productosArray) {
-                    System.out.println(p.getNombre() + " - " + p.getPrecio());
-                }
-
-                this.productos = Arrays.asList(productosArray);
-                this.productosFiltrados = new ArrayList<>(productos);
-                
-                System.out.println("Se han guardado " + this.productos.size() + " productos.");
-            } else {
-                System.out.println("Error: Código de respuesta HTTP " + response.statusCode());
-                FacesContext.getCurrentInstance().addMessage(null,
-                        new FacesMessage(FacesMessage.SEVERITY_ERROR, "Error al obtener productos: " + response.statusCode(), null));
-            }
-
-        } catch (JsonMappingException e) {
-            e.printStackTrace();
-            System.out.println("Error en el mapeo del JSON: " + e.getMessage());
-        } catch (JsonProcessingException e) {
-            e.printStackTrace();
-            System.out.println("Error en el procesamiento del JSON: " + e.getMessage());
-        } catch (IOException | InterruptedException e) {
-            e.printStackTrace();
-            FacesContext.getCurrentInstance().addMessage(null,
-                    new FacesMessage(FacesMessage.SEVERITY_ERROR, "Error en la conexión con la API", null));
-        }
-    }
-*/
-    
     public String verDetalle(Producto producto) {
         this.selectedProduct = producto;
         return "detalleProducto?faces-redirect=true";
     }
-    
+
     public void loadSelectedProduct() {
         if (selectedProductId != null) {
             selectedProduct = productos.stream()
-                .filter(p -> p.getId().equals(selectedProductId))
-                .findFirst()
-                .orElse(null);
+                    .filter(p -> p.getId().equals(selectedProductId))
+                    .findFirst()
+                    .orElse(null);
         }
-        System.out.println(selectedProductId+"####3");
+        System.out.println(selectedProductId + "####3");
     }
 
-    // Getters y Setters
-    public String getSelectedProductId() {
-        return selectedProductId;
-    }
-
-    public void setSelectedProductId(String selectedProductId) {
-        this.selectedProductId = selectedProductId;
-    }
-
-    public Producto getSelectedProduct() {
-        return selectedProduct;
-    }
-    
-    
+    // Métodos de búsqueda con normalización
     public List<Producto> buscarProducto(String criterio) {
         if (criterio == null || criterio.trim().isEmpty()) {
             return productos; // Si no hay criterio, devuelve la lista completa.
         }
 
-        String criterioLower = criterio.toLowerCase();
+        String criterioLower = normalizeString(criterio).toLowerCase(); // Normaliza y convierte a minúsculas
 
         return productos.stream()
-                .filter(p -> p.getNombre().toLowerCase().contains(criterioLower))
-                .toList();
+                .filter(p -> normalizeString(p.getNombre()).toLowerCase().contains(criterioLower))
+                .collect(Collectors.toList());
     }
-
-    private boolean noResultados; // Nueva variable para controlar la visibilidad del mensaje
 
     public void filtrarProductos() {
         if (criterioBusqueda == null || criterioBusqueda.trim().isEmpty()) {
             productosFiltrados = new ArrayList<>(productos);
             noResultados = false;
         } else {
-            String criterioLower = criterioBusqueda.toLowerCase();
+            String criterioLower = normalizeString(criterioBusqueda).toLowerCase(); // Normaliza y convierte a minúsculas
             productosFiltrados = productos.stream()
-                    .filter(p -> p.getNombre().toLowerCase().contains(criterioLower))
-                    .toList();
+                    .filter(p -> normalizeString(p.getNombre()).toLowerCase().contains(criterioLower))
+                    .collect(Collectors.toList());
             noResultados = productosFiltrados.isEmpty(); // True si no hay productos
         }
     }
@@ -223,7 +165,6 @@ public class ProductoController {
     public boolean isNoResultados() {
         return noResultados;
     }
-
 
     // Getters y Setters
     public String getCriterioBusqueda() {
@@ -234,5 +175,4 @@ public class ProductoController {
         this.criterioBusqueda = criterioBusqueda;
         filtrarProductos();
     }
-
 }
